<resources>
    <string name="app_name">Atividade</string>
    <string name="string_text_hint_primeiro_nome">Primeiro Nome</string>
    <string name="text_hint_sobrenome">Sobrenome</string>
    <string name="text_hint_telefone">Telefone</string>
    <string name="text_hint_nome_do_curso">Nome Do Curso</string>
    <string name="text_hint_salvar">Salvar</string>
    <string name="text_hint_limpar">Limpar</string>
    <string name="text_hint_finalizar">Finalizar</string>
    <string name="aplica_o_mobile">Aplicação Mobile</string>
</resources>